FFS-518 #comment Split service responsibilities and adjust tests